--- a/booth-registration-ar.html
+++ b/booth-registration-ar.html
@@ -15,7 +15,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="احجز جناحك في معرض قطر للتعليم 2026، المعرض الجامعي الرائد في دول مجلس التعاون الخليجي. اضمن مساحتك في أكبر معرض لاستقطاب الطلاب في منطقة الشرق الأوسط وشمال أفريقيا وتواصل مع الطلاب وأولياء الأمور وقادة الصناعة.">
     <title>احجز جناحك | تسجيل العارضين | معرض قطر للتعليم 2026</title>
-    <link rel="icon" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png" type="image/png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_16,h_16,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_32,h_32,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_180,h_180,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
     <link rel="canonical" href="https://eduexpoqatar.com/booth-registration-ar.html" />
     <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/booth-registration.html" />
     <link rel="alternate" hreflang="ar" href="https://eduexpoqatar.com/booth-registration-ar.html" />
