--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Join Qatar Education Expo 2026, the leading international education fair and university expo in the GCC. A premier gulf education exhibition to explore study abroad options in the Middle East, meet top universities, and discover your future. Register free for this top student recruitment fair.">
     <title>Qatar Education Expo 2026 | Global Education Expo & University Fair in GCC</title>
-    <link rel="icon" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png" type="image/png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_16,h_16,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_32,h_32,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_180,h_180,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
     
     <link rel="canonical" href="https://eduexpoqatar.com/index.html" />
     <link rel="alternate" hreflang="ar" href="https://eduexpoqatar.com/index-ar.html" />
@@ -467,13 +469,13 @@
         <!-- 7. TESTIMONIALS -->
         <section id="testimonials" class="bg-surface">
             <div class="container">
-                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076631/owl-tech.2_qxwqmx.webp" alt="Qatar Education Expo's owl mascot looking over the testimonials section." class="testimonials-mascot">
-                <h2>Why Leaders Endorse Qatar Education Expo 2026</h2>
-                <p class="subtitle">Hear what industry experts are saying about the importance of this vital new platform for the MENA region.</p>
+                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076631/owl-tech.2_qxwqmx.webp" alt="Qatar Education Expo's owl mascot peeking over the testimonials section." class="testimonials-mascot">
+                <h2>Why Leaders Endorse QELE 2026</h2>
+                <p class="subtitle">Hear from industry experts on the importance of this new, vital platform for the MENA region.</p>
                 <div class="testimonials-grid">
                     <div class="testimonial-card">
                         <i class="fas fa-quote-left"></i>
-                        <blockquote>The quality of student engagement and networking was exceptional. We surpassed our recruitment targets in just two days. A must-attend event.</blockquote>
+                        <blockquote>The quality of student interaction and networking was exceptional. We surpassed our student recruitment targets in just two days. A must-attend event.</blockquote>
                         <div class="testimonial-author">
                             <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761483428/Untitled_design_-_2025-10-26T182537.107_wd59hw.webp" alt="Photo of Dr. Anya Sharma.">
                             <div>
@@ -484,7 +486,7 @@
                     </div>
                      <div class="testimonial-card">
                         <i class="fas fa-quote-left"></i>
-                        <blockquote>Qatar Education Expo was the perfect launchpad for our new EdTech solution. The access to school principals and government officials was unparalleled. The ROI was immediate.</blockquote>
+                        <blockquote>QELE was the perfect platform to launch our new EdTech solution. The access to school principals and government officials was unparalleled. The ROI was immediate.</blockquote>
                         <div class="testimonial-author">
                             <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761480348/Untitled_design_-_2025-10-26T173334.694_svfkm0.webp" alt="Photo of Fatima Al-Khater.">
                             <div>
@@ -495,7 +497,7 @@
                     </div>
                      <div class="testimonial-card">
                         <i class="fas fa-quote-left"></i>
-                        <blockquote>As a Platinum Sponsor, the brand exposure was immense. The team connected us with key decision-makers effortlessly, ensuring our message was front and center.</blockquote>
+                        <blockquote>As a Platinum Sponsor, the brand exposure was immense. The team effortlessly connected us with key decision-makers, ensuring our message was front and center.</blockquote>
                         <div class="testimonial-author">
                             <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761482517/Untitled_design_-_2025-10-26T180850.122_oexvwa.webp" alt="Photo of Johnathan Chen.">
                             <div>
@@ -518,7 +520,7 @@
                         <img src="https://t3.ftcdn.net/jpg/07/25/63/04/360_F_725630470_h0O1vqcxYI69UaYYy3rbiSOcTUI1K3FA.jpg" alt="An engaging exhibition booth at a conference.">
                         <div class="way-card-content">
                             <h3>Exhibit</h3>
-                            <p>Showcase your institution<br><strong>Book your booth</strong></p>
+                            <p>Showcase Your Institution<br><strong>Book Your Booth</strong></p>
                             <div class="way-card-cta">
                                 <a href="booth-registration.html" class="btn btn-outline-light">Reserve My Booth</a>
                             </div>
@@ -526,10 +528,10 @@
                     </div>
                     <!-- Card 2: Speak (Highlighted) -->
                     <div class="way-card way-card--speak way-card--sponsor">
-                        <img src="https://www.shutterstock.com/shutterstock/videos/3501871025/thumb/12.jpg?ip=x480" alt="A woman speaking at a professional event.">
+                        <img src="https://www.shutterstock.com/shutterstock/videos/3501871025/thumb/12.jpg?ip=x480" alt="A professional woman speaking at an event.">
                         <div class="way-card-content">
                             <h3>Speak</h3>
-                            <p>Inspire the region<br><strong>Host a workshop or lecture</strong></p>
+                            <p>Inspire the Region<br><strong>Host a Workshop or Lecture</strong></p>
                              <div class="way-card-cta">
                                 <a href="speaker-registration.html" class="btn btn-outline-light">Join as a Speaker</a>
                             </div>
@@ -538,10 +540,10 @@
                     <!-- Card 3: Sponsor (Premium) -->
                     <div class="way-card way-card--sponsor">
                         <div class="way-card-badge">Premium</div>
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761388536/Gemini_Generated_Image_kj51j7kj51j7kj51_w44mge.webp" alt="Business professionals shaking hands, symbolizing sponsorship.">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761388536/Gemini_Generated_Image_kj51j7kj51j7kj51_w44mge.webp" alt="Business professionals shaking hands, symbolizing a sponsorship.">
                         <div class="way-card-content">
                             <h3>Sponsor</h3>
-                            <p>Lead the change<br><strong>Maximize your MENA visibility</strong></p>
+                            <p>Lead the Change<br><strong>Maximize Your MENA Exposure</strong></p>
                              <div class="way-card-cta">
                                 <a href="sponsorship-registration.html" class="btn btn-primary">Partner With Us</a>
                             </div>
