--- a/index-ar.html
+++ b/index-ar.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -260,7 +261,7 @@
         <!-- EXHIBITOR BENEFITS SECTION (NEW) -->
         <section id="exhibitor-benefits" class="bg-surface section-angled-top">
             <div class="container">
-                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076630/owl-vr_mev0of.webp" alt="التميمة البومة لمعرض قطر للتعليم ترتدي نظارات الواقع الافتراضي لتمثيل فوائد العارضين والتكنولوجيا." class="benefits-mascot">
+                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076630/owl-vr_mev0of.webp" alt="تميمة بومة معرض قطر للتعليم ترتدي نظارات الواقع الافتراضي لتمثيل مزايا العارضين والتكنولوجيا." class="benefits-mascot">
                  <h2>مزايا العارضين</h2>
                  <p class="subtitle">عزز تأثيرك وحقق أهدافك في معرض قطر للتعليم 2026.</p>
                  <div class="benefits-grid">
@@ -292,7 +293,7 @@
         <section id="who-should-exhibit" class="bg-surface">
             <div class="container">
                 <h2>من يجب أن يعرض؟</h2>
-                <p class="subtitle">إذا كنت تقدم حلولاً للنظام البيئي التعليمي، فإن معرض قطر للتعليم هو منصتك المثالية.</p>
+                <p class="subtitle">إذا كنت تقدم حلولاً للنظام البيئي التعليمي،<br> فإن معرض قطر للتعليم هو منصتك المثالية.</p>
                 <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076631/owl-experience_wn76zs.webp" alt="التميمة البومة لمعرض قطر للتعليم تشير إلى قائمة الجهات التي يجب أن تعرض في الحدث." class="exhibit-mascot">
                 <div class="exhibitor-types-grid">
                     <div class="exhibitor-type-card">
