--- a/career-counselling.html
+++ b/career-counselling.html
@@ -16,7 +16,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Get expert guidance to study abroad at our global education expo. We offer specialized advice for students looking to study in the UK, study in Canada, and other top destinations from Qatar at this premier international education fair.">
     <title>Free Study Abroad Guidance | Study in UK & Canada | Gulf Education Exhibition</title>
-    <link rel="icon" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png" type="image/png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_16,h_16,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_32,h_32,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_180,h_180,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
     <link rel="canonical" href="https://eduexpoqatar.com/career-counselling.html" />
     <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/career-counselling.html" />
     <link rel="alternate" hreflang="ar" href="https://eduexpoqatar.com/career-counselling-ar.html" />
@@ -157,38 +159,38 @@
             </div>
         </section>
         
-        <section id="counselling-intro">
+        <section id="what-we-offer" class="bg-surface">
             <div class="container">
-                <h2>Expert Guidance for Your Most Important Decisions</h2>
-                <p class="subtitle">Making choices about your future can be overwhelming. Our team of certified career counsellors is here to provide the clarity and confidence you need to take the next step. All services are complimentary for registered students.</p>
-                <div class="benefits-grid" style="grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));">
-                    <div class="benefit-card">
-                        <i class="fas fa-user-friends"></i>
+                <h2>What We Offer</h2>
+                <p class="subtitle">Our certified counsellors provide complimentary, personalized services to guide you on your academic and professional journey.</p>
+                <div class="offerings-grid">
+                    <div class="offering-card">
+                        <div class="offering-icon"><i class="fas fa-user-friends"></i></div>
                         <h3>Personalized Counselling</h3>
                         <p>One-on-one sessions to discuss your aspirations, strengths, and academic options with an experienced advisor.</p>
                     </div>
-                    <div class="benefit-card">
-                        <i class="fas fa-chart-pie"></i>
+                    <div class="offering-card">
+                        <div class="offering-icon"><i class="fas fa-chart-pie"></i></div>
                         <h3>Psychometric Analysis</h3>
                         <p>Gain deep insights into your personality and career aptitude with internationally recognized assessment tools.</p>
                     </div>
-                    <div class="benefit-card">
-                        <i class="fas fa-file-signature"></i>
+                    <div class="offering-card">
+                        <div class="offering-icon"><i class="fas fa-file-signature"></i></div>
                         <h3>Profile & CV Building</h3>
                         <p>Learn to craft a compelling CV, personal statement, and LinkedIn profile that university admissions officers notice.</p>
                     </div>
-                    <div class="benefit-card">
-                        <i class="fas fa-graduation-cap"></i>
+                    <div class="offering-card">
+                        <div class="offering-icon"><i class="fas fa-graduation-cap"></i></div>
                         <h3>University Matching</h3>
                         <p>Get expert help in shortlisting universities and courses that align perfectly with your academic profile and career goals.</p>
                     </div>
-                    <div class="benefit-card">
-                        <i class="fas fa-award"></i>
+                    <div class="offering-card">
+                        <div class="offering-icon"><i class="fas fa-award"></i></div>
                         <h3>Scholarship Guidance</h3>
-                        <p>Find and apply for global and regional scholarships that match your academic profile and background, with expert help on crafting strong applications.</p>
+                        <p>Find and apply for global and regional scholarships that match your profile, with expert help on crafting strong applications.</p>
                     </div>
-                    <div class="benefit-card">
-                        <i class="fas fa-route"></i>
+                    <div class="offering-card">
+                        <div class="offering-icon"><i class="fas fa-route"></i></div>
                         <h3>Career Pathway Planning</h3>
                         <p>Get clarity on emerging career fields, future job trends, and courses that align with your long-term ambitions.</p>
                     </div>
@@ -196,36 +198,73 @@
             </div>
         </section>
 
-        <section id="guidance-process-section" class="bg-surface">
+        <section id="your-journey">
             <div class="container">
-                <h2>Your Guidance Journey</h2>
+                <h2>Your Journey to Clarity</h2>
                 <p class="subtitle">A simple, structured process to help you get the most out of your counselling experience at the expo.</p>
-                <div class="guidance-process">
-                    <div class="guidance-step">
-                        <div class="step-indicator"><span class="step-number">STEP 1</span><i class="fas fa-arrow-right"></i></div>
-                        <h3>Register for Qatar Education Expo 2026</h3>
-                        <p>Your free student registration is your all-access pass. Once registered, you'll be eligible to book a counselling slot.</p>
+                <div class="journey-timeline">
+                    <div class="journey-step">
+                        <div class="step-icon-wrapper">
+                            <div class="step-icon"><i class="fas fa-user-check"></i></div>
+                            <div class="step-number">1</div>
+                        </div>
+                        <h3>Register for the Expo</h3>
+                        <p>Your free student registration is your all-access pass to book a counselling slot.</p>
                     </div>
-                    <div class="guidance-step">
-                        <div class="step-indicator"><span class="step-number">STEP 2</span><i class="fas fa-arrow-right"></i></div>
+                    <div class="journey-step">
+                        <div class="step-icon-wrapper">
+                            <div class="step-icon"><i class="fas fa-calendar-alt"></i></div>
+                            <div class="step-number">2</div>
+                        </div>
                         <h3>Book Your Session</h3>
-                        <p>Closer to the event date, you'll receive an email to book a specific time slot with one of our counsellors at the expo.</p>
+                        <p>You'll receive an email to book a time slot with a counsellor at the expo.</p>
                     </div>
-                    <div class="guidance-step">
-                        <div class="step-indicator"><span class="step-number">STEP 3</span><i class="fas fa-arrow-right"></i></div>
+                    <div class="journey-step">
+                        <div class="step-icon-wrapper">
+                            <div class="step-icon"><i class="fas fa-briefcase"></i></div>
+                            <div class="step-number">3</div>
+                        </div>
                         <h3>Prepare for Your Session</h3>
-                        <p>Think about your questions, interests, and bring any relevant documents like school transcripts or test scores to make the session highly productive.</p>
+                        <p>Bring your questions and any relevant documents like transcripts to make the session productive.</p>
                     </div>
-                    <div class="guidance-step">
-                        <div class="step-indicator"><span class="step-number">STEP 4</span><i class="fas fa-arrow-right"></i></div>
+                    <div class="journey-step">
+                        <div class="step-icon-wrapper">
+                            <div class="step-icon"><i class="fas fa-comments"></i></div>
+                            <div class="step-number">4</div>
+                        </div>
                         <h3>Meet Your Counsellor</h3>
-                        <p>Attend your scheduled session at the dedicated Career Counselling Zone at the expo and walk away with a clearer action plan for your future.</p>
+                        <p>Attend your scheduled session and walk away with a clearer action plan for your future.</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section id="counselling-faq" class="bg-surface">
+        <section id="meet-the-experts" class="bg-surface">
+            <div class="container">
+                <h2>Meet the Experts</h2>
+                <p class="subtitle">Our team of certified counsellors brings years of experience from top educational institutions worldwide.</p>
+                <div class="speakers-grid" style="grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); max-width: 800px; margin: 0 auto;">
+                    <div class="speaker-card">
+                        <img src="https://images.pexels.com/photos/415829/pexels-photo-415829.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Headshot of Dr. Aisha Al-Marri" class="speaker-photo">
+                        <div class="speaker-info">
+                            <h4>Dr. Aisha Al-Marri</h4>
+                            <p class="speaker-title">Lead Career Counselor</p>
+                            <p class="speaker-org">With over 15 years of experience in higher education guidance, Dr. Aisha specializes in helping students navigate admissions for top universities in the UK and USA.</p>
+                        </div>
+                    </div>
+                    <div class="speaker-card">
+                        <img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Headshot of Mr. Omar Hassan" class="speaker-photo">
+                        <div class="speaker-info">
+                            <h4>Mr. Omar Hassan</h4>
+                            <p class="speaker-title">Admissions & Scholarship Advisor</p>
+                            <p class="speaker-org">Mr. Omar is an expert in profile building and scholarship applications, with a track record of helping students secure funding for their dream universities.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="counselling-faq">
             <div class="container">
                 <h2>Have Questions?</h2>
                 <div class="faq-accordion">
@@ -272,6 +311,8 @@
         </section>
     </main>
     
+    <div id="cookie-banner"></div>
+
     <footer class="main-footer">
         <div class="container">
             <div class="footer-grid">
