--- a/career-counselling-ar.html
+++ b/career-counselling-ar.html
@@ -138,89 +138,110 @@
     </header>
 
     <main>
-        <section id="hero" class="counselling-hero">
-            <div class="container hero-content">
+        <section class="counselling-hero-v2">
+            <div class="container">
                 <div class="hero-text">
-                    <h1>إرشاد متخصص للدراسة في الخارج</h1>
-                    <p>إرشاد مهني شخصي ومجاني في معرض قطر للتعليم 2026 لمساعدتك على اكتشاف مسارك، واختيار الجامعة المناسبة، وبناء ملف شخصي متميز.</p>
+                    <h1>ارسم مستقبلك بثقة</h1>
+                    <p>أطلق العنان لإمكانياتك مع استشارات مهنية مجانية وشخصية في معرض قطر للتعليم 2026. نساعدك على اكتشاف مسارك، واختيار الجامعة المناسبة، وبناء ملف شخصي متميز للنجاح.</p>
                     <div class="cta-group">
-                        <a href="student-registration-ar.html" class="btn btn-primary">سجل للحصول على دخول مجاني</a>
+                        <a href="student-registration-ar.html" class="btn btn-primary">احجز جلستك المجانية</a>
                     </div>
+                    <div class="hero-stats">
+                        <div class="hero-stat-item"><i class="fas fa-university"></i> <p>+100 جامعة شريكة</p></div>
+                        <div class="hero-stat-item"><i class="fas fa-certificate"></i> <p>مستشارون عالميون معتمدون</p></div>
+                        <div class="hero-stat-item"><i class="fas fa-check-circle"></i> <p>اختبارات نفسية مجانية</p></div>
+                    </div>
+                </div>
+                <div class="hero-image-v2">
+                    <picture>
+                        <source srcset="https://images.pexels.com/photos/3184418/pexels-photo-3184418.jpeg?auto=compress&cs=tinysrgb&w=800&fm=webp" media="(max-width: 768px)">
+                        <img src="https://images.pexels.com/photos/3184418/pexels-photo-3184418.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="مجموعة متنوعة من الطلاب والمهنيين يتعاونون حول طاولة." loading="lazy">
+                    </picture>
                 </div>
             </div>
         </section>
         
-        <section id="counselling-intro">
+        <section class="feature-section bg-surface">
             <div class="container">
-                <h2>إرشاد متخصص لأهم قراراتك</h2>
-                <p class="subtitle">قد يكون اتخاذ القرارات بشأن مستقبلك أمرًا مربكًا. فريقنا من المستشارين المهنيين المعتمدين هنا ليوفر لك الوضوح والثقة التي تحتاجها لاتخاذ الخطوة التالية. جميع الخدمات مجانية للطلاب المسجلين.</p>
-                <div class="benefits-grid" style="grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));">
-                    <div class="benefit-card">
-                        <i class="fas fa-user-friends"></i>
-                        <h3>إرشاد شخصي</h3>
-                        <p>جلسات فردية لمناقشة طموحاتك ونقاط قوتك وخياراتك الأكاديمية مع مستشار خبير.</p>
+                <h2>أطلق العنان لإمكانياتك</h2>
+                <p class="subtitle">صُممت خدماتنا المجانية لتوفير الوضوح والتوجيه لرحلتك الأكاديمية والمهنية.</p>
+                <div class="feature-list">
+                    <div class="feature-item">
+                        <div class="feature-icon"><i class="fas fa-user-friends"></i></div>
+                        <div class="feature-text">
+                            <h4>إرشاد شخصي</h4>
+                            <p>جلسات فردية لمناقشة طموحاتك ونقاط قوتك وخياراتك الأكاديمية مع مستشار خبير.</p>
+                        </div>
                     </div>
-                    <div class="benefit-card">
-                        <i class="fas fa-chart-pie"></i>
-                        <h3>تحليل نفسي</h3>
-                        <p>احصل على رؤى عميقة حول شخصيتك وميولك المهنية باستخدام أدوات تقييم معترف بها دوليًا.</p>
+                    <div class="feature-item">
+                        <div class="feature-icon"><i class="fas fa-chart-pie"></i></div>
+                        <div class="feature-text">
+                            <h4>تحليل نفسي</h4>
+                            <p>احصل على رؤى عميقة حول شخصيتك وميولك المهنية باستخدام أدوات تقييم معترف بها دوليًا.</p>
+                        </div>
                     </div>
-                    <div class="benefit-card">
-                        <i class="fas fa-file-signature"></i>
-                        <h3>بناء الملف الشخصي والسيرة الذاتية</h3>
-                        <p>تعلم كيفية صياغة سيرة ذاتية مقنعة، وبيان شخصي، وملف شخصي على لينكد إن يجذب انتباه مسؤولي القبول بالجامعات.</p>
+                    <div class="feature-item">
+                        <div class="feature-icon"><i class="fas fa-file-signature"></i></div>
+                        <div class="feature-text">
+                            <h4>بناء الملف الشخصي والسيرة الذاتية</h4>
+                            <p>تعلم كيفية صياغة سيرة ذاتية وبيان شخصي مقنع يجذب انتباه مسؤولي القبول بالجامعات.</p>
+                        </div>
                     </div>
-                    <div class="benefit-card">
-                        <i class="fas fa-graduation-cap"></i>
-                        <h3>مطابقة الجامعات</h3>
-                        <p>احصل على مساعدة الخبراء في تحديد قائمة مختصرة بالجامعات والدورات التي تتوافق تمامًا مع ملفك الأكاديمي وأهدافك المهنية.</p>
+                    <div class="feature-item">
+                        <div class="feature-icon"><i class="fas fa-graduation-cap"></i></div>
+                        <div class="feature-text">
+                            <h4>مطابقة الجامعات</h4>
+                            <p>احصل على مساعدة الخبراء في تحديد قائمة مختصرة بالجامعات التي تتوافق تمامًا مع ملفك الأكاديمي وأهدافك المهنية.</p>
+                        </div>
                     </div>
-                    <div class="benefit-card">
-                        <i class="fas fa-award"></i>
-                        <h3>إرشادات المنح الدراسية</h3>
-                        <p>ابحث عن المنح الدراسية العالمية والإقليمية التي تناسب ملفك الأكاديمي وخلفيتك وتقدم إليها، مع مساعدة الخبراء في صياغة طلبات قوية.</p>
+                    <div class="feature-item">
+                        <div class="feature-icon"><i class="fas fa-award"></i></div>
+                        <div class="feature-text">
+                            <h4>إرشادات المنح الدراسية</h4>
+                            <p>ابحث عن المنح الدراسية العالمية وقدم عليها بمساعدة الخبراء في صياغة طلبات قوية.</p>
+                        </div>
                     </div>
-                    <div class="benefit-card">
-                        <i class="fas fa-route"></i>
-                        <h3>تخطيط المسار المهني</h3>
-                        <p>احصل على وضوح بشأن المجالات المهنية الناشئة، واتجاهات الوظائف المستقبلية، والدورات التي تتوافق مع طموحاتك طويلة الأجل.</p>
+                    <div class="feature-item">
+                        <div class="feature-icon"><i class="fas fa-route"></i></div>
+                        <div class="feature-text">
+                            <h4>تخطيط المسار المهني</h4>
+                            <p>احصل على وضوح بشأن المجالات المهنية الناشئة واتجاهات الوظائف المستقبلية التي تتماشى مع طموحاتك طويلة الأجل.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section id="guidance-process-section" class="bg-surface">
+        <section id="meet-the-experts-v2" class="bg-surface">
             <div class="container">
-                <h2>رحلتك الإرشادية</h2>
-                <p class="subtitle">عملية بسيطة ومنظمة لمساعدتك على تحقيق أقصى استفادة من تجربتك الإرشادية في المعرض.</p>
-                <div class="guidance-process">
-                    <div class="guidance-step">
-                        <div class="step-indicator"><span class="step-number">الخطوة 1</span><i class="fas fa-arrow-left"></i></div>
-                        <h3>سجل في معرض قطر للتعليم 2026</h3>
-                        <p>تسجيلك المجاني كطالب هو تذكرتك الشاملة. بمجرد التسجيل، ستكون مؤهلاً لحجز موعد إرشادي.</p>
+                <h2>تعرف على مستشاريك</h2>
+                <p class="subtitle">يتمتع فريقنا من المستشارين المعتمدين بسنوات من الخبرة من أفضل المؤسسات التعليمية في جميع أنحاء العالم.</p>
+                <div class="counselor-grid">
+                    <div class="counselor-card-v2">
+                        <img src="https://images.pexels.com/photos/415829/pexels-photo-415829.jpeg?auto=compress&cs=tinysrgb&w=400" alt="صورة د. عائشة المري" class="speaker-photo">
+                        <div class="speaker-info">
+                            <h4>د. عائشة المري</h4>
+                            <p class="speaker-title">مستشارة مهنية رئيسية</p>
+                            <p class="speaker-org">بخبرة تزيد عن 15 عامًا في الإرشاد للتعليم العالي، تتخصص الدكتورة عائشة في مساعدة الطلاب على التنقل في إجراءات القبول في أفضل الجامعات.</p>
+                            <p class="counselor-specialty">متخصصة في: القبول في جامعات المملكة المتحدة والولايات المتحدة الأمريكية</p>
+                        </div>
                     </div>
-                    <div class="guidance-step">
-                        <div class="step-indicator"><span class="step-number">الخطوة 2</span><i class="fas fa-arrow-left"></i></div>
-                        <h3>احجز جلستك</h3>
-                        <p>مع اقتراب موعد الحدث، ستتلقى بريدًا إلكترونيًا لحجز موعد محدد مع أحد مستشارينا في المعرض.</p>
-                    </div>
-                    <div class="guidance-step">
-                        <div class="step-indicator"><span class="step-number">الخطوة 3</span><i class="fas fa-arrow-left"></i></div>
-                        <h3>استعد لجلستك</h3>
-                        <p>فكر في أسئلتك واهتماماتك، وأحضر أي مستندات ذات صلة مثل كشوف الدرجات المدرسية أو نتائج الاختبارات لجعل الجلسة مثمرة للغاية.</p>
-                    </div>
-                    <div class="guidance-step">
-                        <div class="step-indicator"><span class="step-number">الخطوة 4</span><i class="fas fa-arrow-left"></i></div>
-                        <h3>قابل مستشارك</h3>
-                        <p>احضر جلستك المجدولة في منطقة الإرشاد المهني المخصصة في المعرض واخرج بخطة عمل أوضح لمستقبلك.</p>
+                    <div class="counselor-card-v2">
+                        <img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?auto=compress&cs=tinysrgb&w=400" alt="صورة السيد عمر حسن" class="speaker-photo">
+                        <div class="speaker-info">
+                            <h4>السيد عمر حسن</h4>
+                            <p class="speaker-title">مستشار القبول والمنح الدراسية</p>
+                            <p class="speaker-org">خبير في بناء الملف الشخصي وطلبات المنح الدراسية، ولديه سجل حافل في مساعدة الطلاب على تأمين التمويل لجامعات أحلامهم.</p>
+                             <p class="counselor-specialty">متخصص في: طلبات المنح الدراسية</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section id="counselling-faq" class="bg-surface">
+        <section id="counselling-faq">
             <div class="container">
-                <h2>لديك أسئلة؟</h2>
+                <h2>لديك أسئلة؟ لدينا الإجابات.</h2>
                 <div class="faq-accordion">
                     <div class="faq-item">
                         <button class="faq-question" aria-expanded="false">
@@ -253,18 +274,19 @@
             </div>
         </section>
 
-        <section id="final-cta">
+        <section class="counselling-final-cta">
             <div class="container">
                  <h2>هل أنت مستعد لاتخاذ الخطوة الأولى؟</h2>
                  <p>مستقبلك في انتظارك. سجل للحصول على بطاقتك المجانية لمعرض قطر للتعليم 2026 اليوم لفتح الوصول إلى خدمات الإرشاد المهني المتخصصة لدينا، ومقابلة أفضل الجامعات، والمزيد.</p>
                  <div class="cta-group">
-                    <a href="student-registration-ar.html" class="btn btn-primary" style="background: #101c35; border-color: #101c35;">سجل مجانًا الآن</a>
-                    <a href="contact-ar.html" class="btn btn-outline-light">اتصل بنا</a>
+                    <a href="student-registration-ar.html" class="btn btn-primary">سجل مجانًا الآن</a>
                  </div>
             </div>
         </section>
     </main>
     
+    <div id="cookie-banner"></div>
+
     <footer class="main-footer">
         <div class="container">
             <div class="footer-grid">
@@ -303,7 +325,7 @@
                         </li>
                         <li>
                             <i class="fas fa-phone"></i>
-                            <a href="tel:+97474449111">+974 7444 9111</a>
+                            <a href="tel:+97474449111" dir="ltr">+974 7444 9111</a>
                         </li>
                     </ul>
                     <div class="social-links">
